[metadata]
name = stackmon-apimon-tests
summary = Ansible based test scenarios for the StackMon (ApiMon)
description-file =
    README.md
author = Ecosystem Contributors
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
